Dark mode issue solved, Editor all options show.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,14 +42,7 @@
     }
 }
 
-* {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    font-family: "Manrope", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-*:before, *:after {
+*, *:before, *:after {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -60,6 +53,8 @@ body {
     margin: 0;
     font-size: 16px;
     line-height: 1.25rem;
+    font-family: "Manrope", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 html {
@@ -918,9 +913,11 @@ h3:empty {
 h4:empty {
     min-height: 1.375rem;
 }
+
 h5:empty {
     min-height: 1.125rem;
 }
+
 h6:empty {
     min-height: 0.75rem;
 }
